--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<link rel="stylesheet" href="/sass/style.scss" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>React Projekt</title>
+		<title>React Projekt @ cimdata</title>
 		<meta name="robots" content="index,follow" />
 		<meta name="siteinfo" content="/robots.txt" />
 		<link
@@ -20,6 +20,7 @@
 			rel="stylesheet"
 			href="assets/weather-icons-master/css/weather-icons-wind.min.css"
 		/>
+		<link rel="manifest" href="manifest.json" />
 	</head>
 	<body>
 		<div id="root"></div>
