--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 		<link rel="stylesheet" href="/sass/style.scss" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React Projekt @ cimdata</title>
-		<meta name="robots" content="index,follow" />
-		<meta name="siteinfo" content="/robots.txt" />
 		<link
 			rel="stylesheet"
 			href="/assets/fontawesome-free-5.15.4-web/css/all.min.css"
 		/>
 		<link
 			rel="stylesheet"
-			href="assets/weather-icons-master/css/weather-icons.min.css"
+			href="/assets/weather-icons-master/css/weather-icons.min.css"
 		/>
 		<link
 			rel="stylesheet"
-			href="assets/weather-icons-master/css/weather-icons-wind.min.css"
+			href="/assets/weather-icons-master/css/weather-icons-wind.min.css"
 		/>
-		<link rel="manifest" href="manifest.json" />
+		<link rel="manifest" href="/manifest.json" />
 	</head>
 	<body>
 		<div id="root"></div>
